--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 	<link href="assets/css/app.css" rel="stylesheet">
 	<link href="assets/css/icons.css" rel="stylesheet">
-	<title>Synadmin – Bootstrap5 Admin Template</title>
+	<title>SENADO</title>
 </head>
 
 <body>
@@ -37,43 +37,43 @@
 							<div class="card-body">
 								<div class="p-4 rounded">
 									<div class="text-center">
-										<h3 class="">Sign in</h3>
-										<p>Don't have an account yet? <a href="authentication-signup.html">Sign up here</a>
+										<h3 class="">Iniciar sesión</h3>
+										<p>¿No tienes una cuenta aún? <a href="index.html">Regístrate aquí</a>
 										</p>
 									</div>
 									<div class="d-grid">
-										<a class="btn my-4 shadow-sm btn-white" href="javascript:;"> <span class="d-flex justify-content-center align-items-center">
+										<a class="btn my-4 shadow-sm btn-white" href="juan-diego.html"> <span class="d-flex justify-content-center align-items-center">
                           <img class="me-2" src="assets/images/icons/search.svg" width="16" alt="Image Description">
-                          <span>Sign in with Google</span>
+                          <span>Ingresar con Google</span>
 											</span>
-										</a> <a href="javascript:;" class="btn btn-facebook"><i class="bx bxl-facebook"></i>Sign in with Facebook</a>
+										</a> <a href="juan-diego.html" class="btn btn-facebook"><i class="bx bxl-facebook"></i>Ingresar con Facebook</a>
 									</div>
-									<div class="login-separater text-center mb-4"> <span>OR SIGN IN WITH EMAIL</span>
+									<div class="login-separater text-center mb-4"> <span>O ingresa con tu correo electrónico</span>
 										<hr/>
 									</div>
 									<div class="form-body">
-										<form class="row g-3">
+										<form class="row g-3" action="juan-diego.html">
 											<div class="col-12">
-												<label for="inputEmailAddress" class="form-label">Email Address</label>
-												<input type="email" class="form-control" id="inputEmailAddress" placeholder="Email Address">
+												<label for="inputEmailAddress" class="form-label">Correo electrónico</label>
+												<input type="email" class="form-control" id="inputEmailAddress" placeholder="Correo electrónico">
 											</div>
 											<div class="col-12">
-												<label for="inputChoosePassword" class="form-label">Enter Password</label>
+												<label for="inputChoosePassword" class="form-label">Contraseña</label>
 												<div class="input-group" id="show_hide_password">
-													<input type="password" class="form-control border-end-0" id="inputChoosePassword" value="12345678" placeholder="Enter Password"> <a href="javascript:;" class="input-group-text bg-transparent"><i class='bx bx-hide'></i></a>
+													<input type="password" class="form-control border-end-0" id="inputChoosePassword" value="12345678" placeholder="Ingresa tu contraseña"> <a href="javascript:;" class="input-group-text bg-transparent"><i class='bx bx-hide'></i></a>
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-check form-switch">
 													<input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
-													<label class="form-check-label" for="flexSwitchCheckChecked">Remember Me</label>
+													<label class="form-check-label" for="flexSwitchCheckChecked">Recordar mis datos</label>
 												</div>
 											</div>
-											<div class="col-md-6 text-end">	<a href="authentication-forgot-password.html">Forgot Password ?</a>
+											<div class="col-md-6 text-end">	<a href="#">¿Olvidaste tu contraseña?</a>
 											</div>
 											<div class="col-12">
 												<div class="d-grid">
-													<button type="submit" class="btn btn-primary"><i class="bx bxs-lock-open"></i>Sign in</button>
+													<button type="submit" class="btn btn-primary"><i class="bx bxs-lock-open"></i>Ingresar</button>
 												</div>
 											</div>
 										</form>
