Email removed from name

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<form class="row g-3" action="juan-diego.html">
 											<div class="col-sm-12">
 												<label for="inputFirstName" class="form-label">Nombre completo</label>
-												<input type="email" class="form-control" id="inputFirstName" placeholder="Juan Gómez">
+												<input type="text" class="form-control" id="inputFirstName" placeholder="Juan Gómez">
 											</div>
 											<div class="col-12">
 												<label for="inputEmailAddress" class="form-label">Correo electrónico</label>
